fixes spacing issue and some other

--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -140,6 +140,7 @@
   font-family: "Muli", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 12px;
   padding: 6px 12px;
+  padding-right: 34px;
 }
 
 .MenuItemContainer {
